2001-07-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "nn" to ALL_LINGUAS.
	
2001-07-15  Almer S. Tigelaar  <almer@gnome.org>

	* stf.c (stf_read_workbook): Honor lines to parse.

	* gui-clipboard.c (x_selection_to_cell_region): Idem.

	* stf-parse.c (stf_parse_options_set_lines_to_parse): Don't
	convert to index it's not an index.

2001-07-15  Andreas J. Guelzo  <aguelzow@math.concordia.ab.ca>

	* src/analysis-tools.c (anova_two_factor_with_r_tool): Finish
 	implementation.

2001-07-15  Zbigniew Chyla  <cyba@gnome.pl>

	* src/workbook-control-gui.c:
	(send_menu_item): Defined static string instead of SEND_MENU_ITEM macro
	to avoid backslashes, added _tip property.
	(send_menu_item_i18n): Array of strings from send_menu_item intended for
	localization (i18n tools can't extract strings from XML inside .c file).
	(workbook_control_gui_init): Adjusted.

2001-07-15  Jody Goldberg <jgoldberg@home.com>

	* src/sheet.c (sheet_freeze_panes) : Avoid double calling set_panes.

2001-07-15  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-control-gui.c (scg_resize) : Adust to change in semantics
	  and name from sheet::frozen::bottom_right ->
	                sheet::unfrozen_top_left.
	(scg_scrollbar_config) : ditto.
	(scg_set_left_col) : ditto.
	(scg_set_top_row) : ditto.
	(scg_make_cell_visible) : ditto.
	(scg_set_panes) : ditto.
	* src/sheet.c (sheet_new) : ditto.
	(sheet_update_only_grid) : ditto.
	(sheet_freeze_panes) : ditto.
	(sheet_is_frozen) : ditto.

	* src/sheet-merge.c (sheet_merge_add) : don't regen the spans until
	  after the merge is listed.

2001-07-14  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-sheet.c (gnumeric_sheet_handle_motion) : support
	  reverse scroll for things that started the drag adjacent.  That is
	  about as clear as mud, see the deleted BUG entry.
	(gsheet_sliding_callback) : ditto.

2001-07-14  Zbigniew Chyla  <cyba@gnome.pl>

	* src/error-info.[ch]
	(error_info_new_vprintf): New.